2009-11-19  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tkCanvas.c: [Bug 2899685]: fix the redraw logic of [imove]

2009-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/GetHINSTANCE.3   Fix mentioned header file
	* win/tcl.m4           Should have been checked in together with
	                       the 2009-08-09 check in of "win/configure"
	* unix/tcl.m4:         [Patch #2883533] tcl.m4 support for Haiku OS
	* unix/configure       (regenerated)
	* unix/Makefile.in     Fix library order in X11_LIB_SWITCHES

2009-11-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvLine.c (LineDeleteCoords): [Bug 2900121]: Get sense of
	test for drawing optimization correct.

2009-11-15  Donal K. Fellows  <dkf@users.sf.net>

	* doc/ttk_treeview.n (detach): Added note that the 'move' operation
	restores detached nodes.

2009-11-12  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/button.tcl, library/ttk/combobox.tcl,
	* library/ttk/notebook.tcl, library/ttk/treeview.tcl: 
	[update] hygiene.

	+ Where possible, replace [a; update; b] with [a ; after 0 b].
	+ Where not possible, use [update idletasks] instead of full [update].
	+ Use [after 0] in favor of [after idle] for delayed work, to reduce
	likelihood of reentrancy issues in [update idletasks].

2009-11-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkPlatDecls.h:	[Bug 2886635]: Restore C++
	friendliness to the tkPlatDecls.h header file, which we insist
	extensions #include to gain access to the Tk_*HWND*() routines.

2009-11-10  Andreas Kupries  <andreask@activestate.com>

	* unix/Makefile.in: Partially reverted Don Porter's 2009-10-20
	commit. The OSX Cocoa code branch still needs tclInt.h and the
	internal headers, thus the TCL_PLATFORM directory. See
	tclMacOSXNotify.c for example.

2009-11-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFileFilter.c (TkFreeFileFilters): Simplify the code in
	this file by consolidating the deletion code together into a single