@@ -18,6 +18,12 @@
 #if 0
 #define __NO_OLD_CONFIG
 #endif
+#ifndef USE_TCL_STUBS
+#   define USE_TCL_STUBS
+#endif
+#ifndef USE_TK_STUBS
+#   define USE_TK_STUBS
+#endif
 #include "tkInt.h"
 
 /*
